[gd_scene load_steps=2 format=3 uid="uid://bh705pcds1pqj"]

[ext_resource type="Script" uid="uid://bs6tcwyxuixr4" path="res://ui/notifications/demo_toast.gd" id="1_ojb5x"]

[node name="DemoToast" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_ojb5x")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="ToastActives" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Toast actives: 0/5"

[node name="ToastQueue" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Toast queue: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="TopLeft" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Top Left"

[node name="TopCenter" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Top Center"

[node name="TopRight" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Top Right"

[node name="CenterLeft" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Center Left"

[node name="Center" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Center"

[node name="CenterRight" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Center Right"

[node name="BottomLeft" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Bottom Left"

[node name="BottomCenter" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Bottom Center"

[node name="BottomRight" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Bottom Right"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Duration: INF"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(93.765, 0)
layout_mode = 2
max_value = 3.0
rounded = true
tick_count = 4
ticks_on_borders = true

[node name="ClearAll" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
text = "Clear all"

[node name="DefaultToast" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
text = "Default Toast"

[node name="ShowIcon" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show Icon"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/ShowIcon" to="." method="_on_show_icon_toggled"]
